--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,13 @@
     <groupId>org.ea</groupId>
     <artifactId>VersioningDemo</artifactId>
     <version>0.8-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>groupId</groupId>
+            <artifactId>VersioningBeans</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.target>1.8</maven.compiler.target>
