--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>ru.prime</groupId>
     <artifactId>VersioningDemo</artifactId>
-    <version>0.9</version>
+    <version>0.10-SNAPSHOT</version>
     <dependencies>
         <dependency>
             <groupId>ru.prime</groupId>
@@ -27,7 +27,7 @@
         <connection>scm:git:git@github.com:alexlember/VersioningDemo.git</connection>
         <developerConnection>scm:git:git@github.com:alexlember/VersioningDemo.git</developerConnection>
         <url>https://github.com/alexlember/VersioningDemo</url>
-        <tag>0.9</tag>
+        <tag>release-0.9</tag>
     </scm>
 
     <build>
